k8s/cluster_ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-app-service
  namespace: simple-app
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: simple-app
