k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-app-ingress
  namespace: simple-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: simple-app.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: simple-app-service  # This should match the name of your service
            port:
              number: 8080
